# SolarFocuser

./: .gitignore  README.md  pyproject.toml
env/: env_cfg.py  solarfocuser.py
runs/Jun11_17-26-13_LAPTOP-THJVJ79O/: events.out.tfevents.1781191573.LAPTOP-THJVJ79O.25204.0
runs/Jun11_17-38-30_LAPTOP-THJVJ79O/: events.out.tfevents.1781192310.LAPTOP-THJVJ79O.28272.0
runs/Jun11_17-41-00_LAPTOP-THJVJ79O/: events.out.tfevents.1781192460.LAPTOP-THJVJ79O.21976.0
runs/Jun11_17-41-20_LAPTOP-THJVJ79O/: events.out.tfevents.1781192480.LAPTOP-THJVJ79O.7768.0
runs/Jun11_20-58-34_LAPTOP-THJVJ79O/: events.out.tfevents.1781204314.LAPTOP-THJVJ79O.26644.0
runs/Jun11_22-05-54_LAPTOP-THJVJ79O/: events.out.tfevents.1781208354.LAPTOP-THJVJ79O.25432.0
solarfocuser/: __init__.py  utils.py
solarfocuser/cfg/: focuser_cfg.py
solarfocuser/env/: focuser_model.py  focuser_task.py  solarfocuser.py
solarfocuser/models/myexp/2026-06-11_171131_run1/: events.out.tfevents.1781190693.LAPTOP-THJVJ79O.28152.0  model_0.pt  myexp.json
solarfocuser/rewards/: rewards.py
solarfocuser/runners/algs/: ppo.py
solarfocuser/runners/modules/: normalizer.py  policy.py  value.py
solarfocuser/runners/storage/: rollout_storage.py
solarfocuser/runners/utils/: distributions.py
solarfocuser/scripts/: play.py  train.py
solarfocuser/src/: controller.py
solarfocuser/utils/: helpers.py  math.py  task_registry.py  wandb_utils.py
